Edited the width value of main_container to avoid overflowing.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,7 @@ img {
   border-radius: 10px;
 }
 .main_container {
-  width: 25rem;
+  width: 20rem;
   border-radius: 20px;
   background-color: var.$bg;
   display: flex;
